tests/pass/enums/basic.tox
enum Foo {
    Fizz,
    Bar
}

fn main() {
    
}