tests/fail/call/string.tox
fn main() {
    "str" (); //error:  Not callable
}